# darklab_article_docker_python

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  Taskfile.shared.compose.yml  Taskfile.shared.envdev.yml  Taskfile.shared.envprod.yml  Taskfile.shared.poetry.yml  Taskfile.yml  mkdocs.yml
.github/actions/cleanup-docker/: action.yml
.github/actions/compose-pull-start/: action.yml
.github/workflows/: build.yml  ci.yml  pages.yml
docker/: wait-for-command.sh
example_frm_django/: .dockerignore  Dockerfile  Makefile  Taskfile.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  pytest.ini
example_frm_django/docker/: nginx.conf
example_frm_django/src/core/: asgi.py  celery.py  settings.py  tests.py  wsgi.py
example_frm_django/src/example/: apps.py  models.py  tasks.py  tests.py
example_frm_django/src/example/migrations/: 0001_initial.py
example_frm_fastapi/: .dockerignore  Dockerfile  Makefile  Taskfile.yml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  pytest.ini
example_frm_fastapi/src/: alembic.ini  conftest.py
example_frm_fastapi/src/alembic/: env.py
example_frm_fastapi/src/alembic/versions/: 0001-cb91e06c00dd.py
example_frm_fastapi/src/core/: base.py  databases.py  declared_base.py  logger.py  main.py  settings.py  tests.py
example_frm_fastapi/src/example/: models.py  tasks.py  tests.py  views.py
example_frm_flask/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
example_frm_flask/src/core/: main.py  wsgi.py
example_python_package/: pyproject.toml
src/: index.md
