[tool.poetry]
name = "example-python-package"
version = "0.1.0"
description = ""
authors = ["dd84ai <dd84ai@gmail.com>"]
readme = "README.md"
packages = [{include = "example_python_package"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
